--- a/index.html
+++ b/index.html
@@ -656,27 +656,25 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Marta Gonzalez, <a href=""><i>River Cure Portal: Colaborative GeoPortal for Curatorship of Digital Resources in the Water Management Domain</i></a>, IST, 2020 (<i>co-supervised with Prof. Alberto Silva</i>)</li> <!-- 18 valores -->
 			<li>João Cardoso, <a href=""><i>Deep Learning for the Automatic Generation of Medical Imaging Reports</i></a>, IST, 2020 (<i>co-supervised with Dr. Nuno Silva</i>)</li> <!-- 18 valores -->
 			<li>David Coimbra, <a href=""><i>A Framework to Assess the Quality and Recommend Changes of Software Issues</i></a>, IST, 2020 (<i>co-supervised with Prof. Rui Maranhão</i>)</li> <!-- 17 valores -->
-			<li>Mário Cardoso, <a href=""><i>Deep Learning for Time Series Forecasting</i></a>, IST, 2020 (<i>co-supervised with Jacinto Estima</i>)</li> <!-- 18 valores -->
-
-				
-			<li>Manuel Santos, <a href=""><i>Deep learning methods for document relevance ranking in the context of search engines for legal/legislative contents</i></a>, IST, 2020 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- ?? valores -->				
-			<li>Tomás de Oliveira, <a href=""><i>Deep learning para classificação de diagramas para peças de cerâmica recuperadas em intervenções arqueológicas</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
-			<li>Henrique Almeida, <a href=""><i>Mapping Urban Areas Leveraging the Analysis of Ground-Level Imagery with Convolutional Neural Networks</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
-			<li>Nádia Fernandes, <a href=""><i>Co-Reference Resolution in Portuguese and Spanish Texts</i></a>, IST, 2020 (<i>co-supervised with Prof. Henrique Lopes Cardoso</i>)</li> <!-- ?? valores -->
-			<li>Rita Conde, <a href=""><i>Predição de eventos em comércio online e sua interação com pesquisas</i></a>, IST, 2020 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- ?? valores -->
-			<!-- <li>Bruno Silva, <a href=""><i>Deep Learning Methods for Processing Digitized Herbarium Specimens</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
-			<li>Bruno Magalhães, <a href=""><i>Integração de dados para construção de gazetteers</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
-			<!-- <li>Marcos Barata, <a href=""><i>Hybrid Approaches for Spatial Data Interpolation</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
-			<!-- <li>Gonçalo Simões, <a href=""><i>Deep Learning for Flood Extent Mapping</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores --> 
-			<li>João Machado, <a href=""><i>Data Extraction and Integration for Creating a Database of Portuguese Unions</i></a>, IST, 2020 (<i>co-supervised with Prof. José Borbinha</i>)</li> <!-- ?? valores -->
+			<li>Mário Cardoso, <a href=""><i>Deep Learning for Time Series Forecasting</i></a>, IST, 2020 (<i>co-supervised with Jacinto Estima</i>)</li> <!-- 18 valores -->			
+			<li>Manuel Santos, <a href=""><i>Sentence-level representations for document ranking</i></a>, IST, 2020 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 17 valores -->	
+			<li>Tomás de Oliveira, <a href=""><i>Deep learning para classificação de diagramas para peças de cerâmica recuperadas em intervenções arqueológicas</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 19 valores -->
+			<li>Henrique Almeida, <a href=""><i>Mapping Urban Areas Leveraging the Analysis of Ground-Level Imagery with Convolutional Neural Networks</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 16 valores -->
+			<li>Nádia Fernandes, <a href=""><i>Co-Reference Resolution in Portuguese and Spanish Texts</i></a>, IST, 2020 (<i>co-supervised with Prof. Henrique Lopes Cardoso</i>)</li> <!-- 17 valores -->
+			<li>Bruno Magalhães, <a href=""><i>Integração de dados para construção de gazetteers</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 16 valores -->
+			<li>João Machado, <a href=""><i>Data Extraction and Integration for Creating a Database of Portuguese Unions</i></a>, IST, 2020 (<i>co-supervised with Prof. José Borbinha</i>)</li> <!-- 15 valores -->
 			<li>Luís Antunes, <a href=""><i>Deep Learning Methods for Segmenting, Coloring, and Super-Resolving Historical Aerial Photos</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
-			<!-- <li>Alexandre Machado, <a href=""><i>Process Mining From Natural Language Text</i></a>, IST, 2020 </li> --> <!-- ?? valores --> 
-			<li>Nuno Amaro, <a href=""><i>Information Extraction on Policy Preferences from Party Manifestos, Political Speeches and Opinion Articles</i></a>, IST, 2020 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
+			<li>Nuno Amaro, <a href=""><i>Information Extraction on Policy Preferences from Party Manifestos, Political Speeches and Opinion Articles</i></a>, IST, 2020 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- 19 valores -->
+			<li>Isabel Coutinho, <a href=""><i>Classificação de texto clínico para auxiliar tarefas de codificação</i></a>, IST, 2020 (<i>co-supervised with Dr. João Leal</i>)</li> <!-- 18 valores -->
+			<li>Miguel Froes, <a href=""><i>Fenotipagem na Multimorbilidade</i></a>, IST, 2020 (<i>co-supervised with Prof. Mário Silva and Dr. Bernardo Neves</i>)</li> <!-- 18 valores -->
+			<li>Luís Pereira, <a href=""><i>Attention Augmented Convolutional Neural Networks for the Classification of Medical Images</i></a>, IST, 2020</li> <!-- 16 valores -->
 
-			<li>Isabel Coutinho, <a href=""><i>Classificação de texto clínico para auxiliar tarefas de codificação</i></a>, IST, 2020 (<i>co-supervised with Dr. João Leal</i>)</li> <!-- ?? valores -->
-			<li>Miguel Froes, <a href=""><i>Fenotipagem na Multimorbilidade</i></a>, IST, 2020 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
-			<li>Luís Pereira, <a href=""><i>Attention Augmented Convolutional Neural Networks for the Classification of Medical Images</i></a>, IST, 2020 (<i>co-supervised with Dr. Nuno Silva</i>)</li> <!-- ?? valores -->
-
+			<!-- <li>Bruno Silva, <a href=""><i>Deep Learning Methods for Processing Digitized Herbarium Specimens</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
+			<!-- <li>Marcos Barata, <a href=""><i>Hybrid Approaches for Spatial Data Interpolation</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
+			<!-- <li>Gonçalo Simões, <a href=""><i>Deep Learning for Flood Extent Mapping</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores --> 
+			<!-- <li>Alexandre Machado, <a href=""><i>Process Mining From Natural Language Text</i></a>, IST, 2021 </li> --> <!-- ?? valores --> 
+			<li>Rita Conde, <a href=""><i>Predição de eventos em comércio online e sua interação com pesquisas</i></a>, IST, 2021 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- ?? valores -->
+				
 			<li>Diogo Viegas, <a href=""><i>Document Geocoding and Toponym Resolution with Neural Language Models</i></a>, IST, 2021 (<i>co-supervised with Prof. Maguelonne Teisseire</i>)</li> <!-- ?? valores -->
 			<li>João Barata, <a href=""><i>Deep Learning for Remote Sensing Image Captioning</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>Martin Mirakyan, <a href=""><i>Neural Architecture Search for Semantic Segmentation of Aerial Imagery</i></a>, IST, 2021 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- ?? valores -->
