--- a/index.html
+++ b/index.html
@@ -746,6 +746,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://dhere.de/locweb/locweb2021/">LocWeb'21</a> |
 						<a href="https://2021.aclweb.org">ACL-IJCNLP'21</a> |
 						<a href="https://dsaa2021.dcc.fc.up.pt">IEEE DSAA'21</a> |
 						<a href="https://2021.naacl.org">NAACL-HLT'21</a> |
@@ -956,7 +957,10 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
-						<!-- Daniel e Duarte do David -->
+						<a href="DEI-DAVID">Duarte Teles</a> |
+						<a href="DEI-DAVID">Daniel Oliveira</a> |
+						<a href="DEI-MARIO">Karan Manghnania</a> |
+						
 						<a href="FCTUNL-JOAO">Ana Luís Coelho</a> |
 						<a href="FCTUNL-LUDWIG">Vladimir Balayan</a> |						
 						<a href="FCTUNL-JOAO">Rafael Ferreira</a> |						
