--- a/index.html
+++ b/index.html
@@ -663,12 +663,12 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Nádia Fernandes, <a href=""><i>Co-Reference Resolution in Portuguese and Spanish Texts</i></a>, IST, 2020 (<i>co-supervised with Prof. Henrique Lopes Cardoso</i>)</li> <!-- 17 valores -->
 			<li>Bruno Magalhães, <a href=""><i>Integração de dados para construção de gazetteers</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 16 valores -->
 			<li>João Machado, <a href=""><i>Data Extraction and Integration for Creating a Database of Portuguese Unions</i></a>, IST, 2020 (<i>co-supervised with Prof. José Borbinha</i>)</li> <!-- 15 valores -->
-			<li>Luís Antunes, <a href=""><i>Deep Learning Methods for Segmenting, Coloring, and Super-Resolving Historical Aerial Photos</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>Nuno Amaro, <a href=""><i>Information Extraction on Policy Preferences from Party Manifestos, Political Speeches and Opinion Articles</i></a>, IST, 2020 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- 19 valores -->
 			<li>Isabel Coutinho, <a href=""><i>Classificação de texto clínico para auxiliar tarefas de codificação</i></a>, IST, 2020 (<i>co-supervised with Dr. João Leal</i>)</li> <!-- 18 valores -->
 			<li>Miguel Froes, <a href=""><i>Fenotipagem na Multimorbilidade</i></a>, IST, 2020 (<i>co-supervised with Prof. Mário Silva and Dr. Bernardo Neves</i>)</li> <!-- 18 valores -->
 			<li>Luís Pereira, <a href=""><i>Attention Augmented Convolutional Neural Networks for the Classification of Medical Images</i></a>, IST, 2020</li> <!-- 16 valores -->
 
+			<!-- <li>Luís Antunes, <a href=""><i>Deep Learning Methods for Segmenting, Coloring, and Super-Resolving Historical Aerial Photos</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
 			<!-- <li>Bruno Silva, <a href=""><i>Deep Learning Methods for Processing Digitized Herbarium Specimens</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
 			<!-- <li>Marcos Barata, <a href=""><i>Hybrid Approaches for Spatial Data Interpolation</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
 			<!-- <li>Gonçalo Simões, <a href=""><i>Deep Learning for Flood Extent Mapping</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores --> 
@@ -689,7 +689,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Filipe Amaral, <a href=""><i>Argumentation mining from textual documents combining deep learning and reasoning</i></a>, IST, 2021 (<i>co-supervised with Prof. Helena Sofia Pinto</i>)</li> <!-- ?? valores -->
 			<li>Francisco Matos, <a href=""><i>Delineating Boundaries for Vague Regions</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 
-			<li>Artur Guimas, <a href=""><i>Key-phrase Extraction Combining Graph-Based Methods and Neural Language Models</i></a>, IST, 2021 (<i>co-supervised with Prof. Mathieu Roche</i>)</li> <!-- ?? valores -->
+			<li>Artur Guimarães, <a href=""><i>Key-phrase Extraction Combining Graph-Based Methods and Neural Language Models</i></a>, IST, 2021 (<i>co-supervised with Prof. Mathieu Roche</i>)</li> <!-- ?? valores -->
 			<li>Nuno Infante, <a href=""><i>Clinical Text Summarization</i></a>, IST, 2021 (<i>co-supervised with Dr. Nuno Silva</i>)</li> <!-- ?? valores -->				
 			</ul>
 		</td>
