--- a/index.html
+++ b/index.html
@@ -669,7 +669,6 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Luís Pereira, <a href=""><i>Attention Augmented Convolutional Neural Networks for the Classification of Medical Images</i></a>, IST, 2020</li> <!-- 16 valores -->
 
 			<!-- <li>Luís Antunes, <a href=""><i>Deep Learning Methods for Segmenting, Coloring, and Super-Resolving Historical Aerial Photos</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
-			<!-- <li>Bruno Silva, <a href=""><i>Deep Learning Methods for Processing Digitized Herbarium Specimens</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
 			<!-- <li>Marcos Barata, <a href=""><i>Hybrid Approaches for Spatial Data Interpolation</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
 			<!-- <li>Gonçalo Simões, <a href=""><i>Deep Learning for Flood Extent Mapping</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores --> 
 			<!-- <li>Alexandre Machado, <a href=""><i>Process Mining From Natural Language Text</i></a>, IST, 2021 </li> --> <!-- ?? valores --> 
@@ -691,6 +690,7 @@ involved in several research projects related to geospatial aspects in informati
 
 			<li>Artur Guimarães, <a href=""><i>Key-phrase Extraction Combining Graph-Based Methods and Neural Language Models</i></a>, IST, 2021 (<i>co-supervised with Prof. Mathieu Roche</i>)</li> <!-- ?? valores -->
 			<li>Nuno Infante, <a href=""><i>Clinical Text Summarization</i></a>, IST, 2021 (<i>co-supervised with Dr. Nuno Silva</i>)</li> <!-- ?? valores -->				
+			<li>Filipe Martins, <a href=""><i>Deep Learning Methods for Processing Digitized Herbarium Specimens</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
