--- a/index.html
+++ b/index.html
@@ -957,10 +957,12 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="DEI-ARLINDO">Rafael Pedro</a> |
+						
 						<a href="DEI-DAVID">Duarte Teles</a> |
 						<a href="DEI-DAVID">Daniel Oliveira</a> |
 						<a href="DEI-MARIO">Karan Manghnania</a> |
-						
+						<a href="DEI-ANDRÉ">João Alves</a> |
 						<a href="FCTUNL-JOAO">Ana Luís Coelho</a> |
 						<a href="FCTUNL-LUDWIG">Vladimir Balayan</a> |						
 						<a href="FCTUNL-JOAO">Rafael Ferreira</a> |						
