--- a/index.html
+++ b/index.html
@@ -746,6 +746,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://www.tpdl.eu/tpdl2021/">TPDL'21</a> |
+						<a href="https://sites.google.com/site/socialnlp2021/">SocialNLP'21</a> |						
 						<a href="http://ach2021.ach.org">ACH'21</a> |
 						<a href="https://dhere.de/locweb/locweb2021/">LocWeb'21</a> |
 						<a href="https://2021.aclweb.org">ACL-IJCNLP'21</a> |
