--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@ involved in several research projects related to geospatial aspects in informati
 
 			<ul>
 <!-- <li>Luís Borges, and Bruno Martins <i>Evaluating Neural Methods for Approximate String Matching and Duplicate Detection</i>, ACM Journal of Data and Information Quality, 2020 [<a href="">PDF</a>]</li> -->
+<li>Diego Jiménez–Badillo, Patricia Murrieta–Flores, Bruno Martins, Ian Gregory, Mariana Favila-Vázquez, and Raquel Liceras-Garrido, <i>Developing Geographically Oriented NLP Approaches to Sixteenth–Century Historical Documents: Digging into Early Colonial Mexico</i>, Digital Humanities Quarterly, 2021 [<a href="http://digitalhumanities.org/dhq/vol/14/4/000490/000490.html">PDF</a>]</li>
 <li>Maria Dias, João Monteiro, Jacinto Estima, Joel Silva, and Bruno Martins, <i>Semantic Segmentation and Colorization of Grayscale Aerial Imagery with W-Net Models</i>, Expert Systems, 2020 [<a href="https://dx.doi.org/10.1111/exsy.12622">PDF</a>]</li>
 <li>Jorge Pereira, João Monteiro, Joel Silva, Jacinto Estima, and Bruno Martins, <i>Assessing Flood Severity from Crowdsourced Social Media Photos with Deep Neural Networks</i>, Multimedia Tools and Applications, vol. 79, 2020 [<a href="https://link.springer.com/article/10.1007/s11042-020-09196-8">PDF</a>]</li>
 <li>João Monteiro, Bruno Martins, Patricia Murrieta-Flores, and João M. Pires, <i>Spatial Disaggregation of Historical Census Data Leveraging Multiple Sources of Ancillary Information</i>, ISPRS International Journal of Geo-Information, vol. 8, no.8, 2019 [<a href="https://www.mdpi.com/2220-9964/8/8/327">PDF</a>]</li>
@@ -561,6 +562,9 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Luís Borges, <i>Neural Information Retrieval</i>, IST/CMU-PT (<i>ongoing co-supervision with Prof. Jamie Callan</i>)</li>
 			<li>Rita Ramos, <i>Deep Learning Methods Bridging Language and Vision</i>, IST/KU.DK (<i>ongoing co-supervision with Prof. Desmond Elliott</i>)</li>
 			<li>André Neves, <i>Deep Learning for Remote Sensing Applications</i>, FCT-UNL (<i>ongoing co-supervision with Prof. João Moura Pires and Prof. Carlos Damásio</i>)</li>			
+			<!-- <li>Isabel Coutinho, <i>Clinical Text Mining</i>, IST (<i>ongoing co-supervision with João Paulo Leal</i>)</li>
+			<li>Gonçalo Raposo, <i>Conversational Search</i>, FCT-UNL (<i>ongoing co-supervision with Prof. Luísa Coheur</i>)</li> -->
+			
 			</ul>
 			<h3>MSc Students</h3>
 			<ul>
