--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://2021.aclweb.org">ACL-IJCNLP'21</a> |
 						<a href="https://dsaa2021.dcc.fc.up.pt">IEEE DSAA'21</a> |
 						<a href="https://2021.naacl.org">NAACL-HLT'21</a> |
-						<a href="https://text2story21.inesctec.pt">Text2Story'21</a> |
+						<a href="https://text2story21.inesctec.pt">Text2Story'21</a> (Recognized Reviewer Award)|
 						<a href="https://www.ecir2021.eu">ECIR'21</a> |
 						<a href="https://aaai.org/Conferences/AAAI-21/">AAAI'21</a> |
 						<a href="https://2021.eacl.org">EACL'21</a> |
@@ -773,9 +773,9 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://ornlcda.github.io/SDProc/">SDP 2020</a> |
 						<a href="https://sites.google.com/site/socialnlp2020/">SocialNLP'20</a> |
 						<a href="https://ai4narratives20.inesctec.pt">AI4Narratives'20</a> |
-						<a href="https://2020.emnlp.org">EMNLP'20</a> |
+						<a href="https://2020.emnlp.org">EMNLP'20</a> (Recognized Reviewer Award)|
 						<a href="http://aacl2020.org">AACL-IJCNLP'20</a> |
-						<a href="https://text2story21.inesctec.pt">Text2Story'20</a> |
+						<a href="https://text2story21.inesctec.pt">Text2Story'20</a> (Recognized Reviewer Award)|
 						<a href="https://www.maisonworkshop.org">MAISoN'20</a> |
 						<a href="http://eric.univ-lyon2.fr/adbis-tpdl-eda-2020/tpdl/">TPDL'20</a> |
 						<a href="http://www.kdd.org/kdd2020/">KDD'20</a> |
