--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ involved in several research projects related to geospatial aspects in informati
 		</td>
 	</tr>
 	<tr>
-		<td>Updated information is available from my academic profile in several websites: <a href="https://scholar.google.com/citations?user=VQMUt8kAAAAJ&hl=en">Google Scholar</a> | <a href="http://dblp.uni-trier.de/pers/hd/m/Martins_0001:Bruno">DBLP</a> | <a href="https://orcid.org/0000-0002-3856-2936">ORCID</a> | <a href="http://dl.acm.org/author_page.cfm?id=81300139701">ACM DL</a> | <a href="https://www.semanticscholar.org/author/Bruno-Martins/144694868">Semantic Scholar</a> | <a href="https://www.aclweb.org/anthology/people/b/bruno-martins/">ACL Anthology</a> | <a href="https://www.scopus.com/authid/detail.uri?authorId=8546762500">Scopus</a></td>
+		<td>Updated information is available from my academic profile in several websites: <a href="https://scholar.google.com/citations?user=VQMUt8kAAAAJ&hl=en">Google Scholar</a> | <a href="https://dblp.org/pid/m/BrunoMartins.html">DBLP</a> | <a href="https://orcid.org/0000-0002-3856-2936">ORCID</a> | <a href="http://dl.acm.org/author_page.cfm?id=81300139701">ACM DL</a> | <a href="https://www.semanticscholar.org/author/Bruno-Martins/144694868">Semantic Scholar</a> | <a href="https://www.aclweb.org/anthology/people/b/bruno-martins/">ACL Anthology</a> | <a href="https://www.scopus.com/authid/detail.uri?authorId=8546762500">Scopus</a></td>
     	</tr>
 	<tr>
 		<td>&nbsp;</td>
