--- a/index.html
+++ b/index.html
@@ -751,6 +751,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://www.kdd.org/kdd2021/">KDD'21</a> |
 						<a href="https://web.fe.up.pt/~prodei/dsie21/">DSIE’2021</a> |						
 						<a href="https://agile-online.org/conference-2021">AGILE'21</a> |
 						<a href="https://www.giscience.org">GIScience'21</a> |
