--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Rita Ramos, <i>Deep Learning Methods Bridging Language and Vision</i>, IST/KU.DK (<i>ongoing co-supervision with Prof. Desmond Elliott</i>)</li>
 			<li>André Neves, <i>Deep Learning for Remote Sensing Applications</i>, FCT-UNL (<i>ongoing co-supervision with Prof. João Moura Pires and Prof. Carlos Damásio</i>)</li>			
 			<li>Gonçalo Raposo, <i>Conversational Search</i>, IST (<i>ongoing co-supervision with Prof. Luísa Coheur</i>)</li>
-			<!-- <li>Isabel Coutinho, <i>Clinical Text Mining</i>, IST (<i>ongoing co-supervision with João Paulo Leal</i>)</li> -->
+			<li>Isabel Coutinho, <i>Clinical Text Mining</i>, IST (<i>ongoing co-supervision with João Paulo Leal</i>)</li>
 			</ul>
 			<h3>MSc Students</h3>
 			<ul>
@@ -674,7 +674,6 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Luís Pereira, <a href=""><i>Attention Augmented Convolutional Neural Networks for the Classification of Medical Images</i></a>, IST, 2020</li> <!-- 16 valores -->
 
 			<!-- <li>Luís Antunes, <a href=""><i>Deep Learning Methods for Segmenting, Coloring, and Super-Resolving Historical Aerial Photos</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
-			<!-- <li>Marcos Barata, <a href=""><i>Hybrid Approaches for Spatial Data Interpolation</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
 			<!-- <li>Gonçalo Simões, <a href=""><i>Deep Learning for Flood Extent Mapping</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores --> 
 			<!-- <li>Alexandre Machado, <a href=""><i>Process Mining From Natural Language Text</i></a>, IST, 2021 </li> --> <!-- ?? valores --> 
 			<li>Rita Conde, <a href=""><i>Predição de eventos em comércio online e sua interação com pesquisas</i></a>, IST, 2021 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- ?? valores -->
@@ -692,10 +691,13 @@ involved in several research projects related to geospatial aspects in informati
 			<li>João Coelho, <a href=""><i>Spatio-Temporal Question Answering Leveraging Neural Language Models for Passage Retrieval</i></a>, IST, 2021 (<i>co-supervised with Prof. João Magalhães and Prof. Helena Sofia Pinto</i>)</li> <!-- ?? valores -->
 			<li>Filipe Amaral, <a href=""><i>Argumentation mining from textual documents combining deep learning and reasoning</i></a>, IST, 2021 (<i>co-supervised with Prof. Helena Sofia Pinto</i>)</li> <!-- ?? valores -->
 			<li>Francisco Matos, <a href=""><i>Delineating Boundaries for Vague Regions</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
-
+			<!-- <li>Marcos Barata, <a href=""><i>Hybrid Approaches for Spatial Data Interpolation</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
+				
 			<li>Artur Guimarães, <a href=""><i>Key-phrase Extraction Combining Graph-Based Methods and Neural Language Models</i></a>, IST, 2021 (<i>co-supervised with Prof. Mathieu Roche</i>)</li> <!-- ?? valores -->
 			<li>Nuno Infante, <a href=""><i>Clinical Text Summarization</i></a>, IST, 2021 (<i>co-supervised with Dr. Nuno Silva</i>)</li> <!-- ?? valores -->				
 			<li>Filipe Martins, <a href=""><i>Deep Learning Methods for Processing Digitized Herbarium Specimens</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
+			<li>Sebastião Almeida, <a href=""><i>Estimating Emotional Valence and Arousal with Transformer-Based Language Models</i></a>, IST, 2021</li> --> <!-- ?? valores -->
+
 			</ul>
 		</td>
     </tr>
