--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ involved in several research projects related to geospatial aspects in informati
 <li>João Santos, Bruno Martins, and David Batista, <i>Document Analytics Through Entity Resolution</i>, Proceedings of the International Conference on Web Information Systems Engineering, 2013 [<a href="http://link.springer.com/chapter/10.1007%2F978-3-642-41154-0_46">PDF</a>] </li>
 <li>Carolina Bento, Bruno Martins, and Pável Calado, <i>Predicting the Future Impact of Academic Publications</i>, Proceedings of the Portuguese Conference on Artificial Intelligence, 2013 [<a href="http://link.springer.com/chapter/10.1007%2F978-3-642-40669-0_32">PDF</a>] </li>
 <li>Tiago Gonçalves, Ana Paula Afonso, and Bruno Martins, <i>Visual Analysis of Mobility Data</i>, PhD Forum of the International Conference on Mobile Data Management, 2013 [<a href="http://dx.doi.org/10.1109/MDM.2013.56">PDF</a>] </li>
-<li>Wesley Mathew, and Bruno Martins, <i>A Comparison of First- and Second-Order HMMs in the Task of Predicting the Next Locations of Mobile Individuals</i>, Proceedings of the ACM SIGSPATIAL International Workshop on Mobile Geographic Information Systems, 2012 [<a href="http://dl.acm.org/citation.cfm?id=2442823">PDF</a>] </li>
+<li>Wesley Mathew, and Bruno Martins, <i>A Comparison of First- and Second-Order HMMs in the Task of Predicting the Next Locations of Mobile Individuals</i>, Proceedings of the ACM ´ International Workshop on Mobile Geographic Information Systems, 2012 [<a href="http://dl.acm.org/citation.cfm?id=2442823">PDF</a>] </li>
 <li>Wesley Mathew, Ruben Raposo, and Bruno Martins, <i>Predicting Future Locations with Hidden Markov Models</i>, Proceedings of the ACM Conference on Ubiquitous Computing, 2012 [<a href="http://dl.acm.org/citation.cfm?id=2370421">PDF</a>] </li>
 <li>Ivo Anastácio, Bruno Martins, and Pável Calado. The DMIR_Tagus Team at TAC-KBP 2012</i>, Proceedings of the Text Analysis Conference, 2012</li>
 <li>Bruno Martins, Helena Galhardas, and Nelson Gonçalves, <i>Um Método de Classificação Automática Para a Detecção de Duplicados em Gazetteers</i>, Proceedings of the Ibero-American Workshop on Data Quality, 2012</li>
@@ -713,6 +713,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
+						<!-- <a href="https://udi.ornl.gov/geoai2019">GeoAI'21</a> | -->
 						<a href="https://stko.geog.ucsb.edu/geokg-geoai2020/">GeoKG-GeoAI 2020</a> |
 						<a href="http://epia2021.inesc-id.pt">EPIA'21</a> |
 						<a href="http://eamt2020.inesc-id.pt">EAMT'20</a> |
@@ -753,6 +754,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://sigspatial2021.sigspatial.org">SIGSPATIAL'21</a> |
 						<a href="http://www.kdd.org/kdd2021/">KDD'21</a> |
 						<a href="https://web.fe.up.pt/~prodei/dsie21/">DSIE’2021</a> |						
 						<a href="https://agile-online.org/conference-2021">AGILE'21</a> |
