--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<td><h1>Bruno Martins</h1></td>
 				</tr>
 				<tr>
-					<td>Assistant Professor, <a href="http://www.dei.ist.utl.pt/">Department of Computer Science and Engineering</a> of <a href="http://www.ist.utl.pt/">Instituto Superior T&eacute;cnico</a> in the <a href="http://www.ulisboa.pt/">University of Lisbon</a>.</td>
+					<td>Assistant Professor, <a href="http://www.ist.utl.pt/">Instituto Superior T&eacute;cnico</a> of the <a href="http://www.ulisboa.pt/">University of Lisbon</a>.</td>
 				</tr>
 				<!-- <tr>
 					<td>Researcher at the <a href="http://idss.inesc-id.pt">Information and Decision Support Systems Lab</a> of <a href="https://www.inesc-id.pt">INESC-ID</a>.</td>
@@ -66,7 +66,7 @@
 					<td>&nbsp;</td>
 				</tr>
 				<tr>
-					<td><strong>Short Bio: </strong>Bruno Martins is an assistant professor at the Computer Science and Engineering Department of IST and a researcher at the Information and Decision Support Systems Lab of INESC-ID, where he works on problems related to the general areas of information retrieval, text mining, and the geographical information sciences. He has been
+					<td><strong>Short Bio: </strong>Bruno Martins is an assistant professor Instututo Superior Técnico of the University of Lisbon and a researcher at INESC-ID. He works on problems related to the general areas of information retrieval, text mining, and the geographical information sciences. Bruno has been
 involved in several research projects related to geospatial aspects in information access and retrieval, and he has accumulated a significant expertise in addressing challenges at the intersection of information retrieval and the geographical information sciences (i.e., in an area that is often referred to as geographical information retrieval).</td>
 				</tr>
 				<tr>
