--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>Bruno Martins | Instituto Superior Técnico, University of Lisbon</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="Keywords" content="Bruno Martins, Bruno Emanuel Martins, IST, University of Lisbon" />
-	<meta name="Description" content="Assistant Professor at Instituto Superior Técnico, University of Lisbon, Portugal." />
+	<meta name="Description" content="Associate Professor at Instituto Superior Técnico, University of Lisbon, Portugal." />
 	<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" media="screen" href="iststyle.css" />
 	<link rel="stylesheet" type="text/css" media="print" href="print.css" />
