--- a/index.html
+++ b/index.html
@@ -754,6 +754,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="">PROPOR'22</a> |
 						<a href="http://www.conll.org/2021">CoNLL'21</a> |
 						<a href="http://sigspatial2021.sigspatial.org">SIGSPATIAL'21</a> |
 						<a href="http://www.kdd.org/kdd2021/">KDD'21</a> |
