--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<td>&nbsp;</td>
 				</tr>
 				<tr>
-					<td><strong>Short Bio: </strong>Bruno Martins is an assistant professor Instututo Superior Técnico of the University of Lisbon and a researcher at INESC-ID. He works on problems related to the general areas of information retrieval, text mining, and the geographical information sciences. Bruno has been
+					<td><strong>Short Bio: </strong>Bruno Martins is an Associate Professor at Instututo Superior Técnico of the University of Lisbon, and a researcher at the Human Language Technologies Lab of INESC-ID. He works on problems related to the general areas of information retrieval, text mining, and the geographical information sciences. Bruno has been
 involved in several research projects related to geospatial aspects in information access and retrieval, and he has accumulated a significant expertise in addressing challenges at the intersection of information retrieval and the geographical information sciences (i.e., in an area that is often referred to as geographical information retrieval).</td>
 				</tr>
 				<tr>
