--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<td><h1>Bruno Martins</h1></td>
 				</tr>
 				<tr>
-					<td>Assistant Professor, <a href="http://www.ist.utl.pt/">Instituto Superior T&eacute;cnico</a> of the <a href="http://www.ulisboa.pt/">University of Lisbon</a>.</td>
+					<td>Associate Professor, <a href="http://www.ist.utl.pt/">Instituto Superior T&eacute;cnico</a> of the <a href="http://www.ulisboa.pt/">University of Lisbon</a>.</td>
 				</tr>
 				<!-- <tr>
 					<td>Researcher at the <a href="http://idss.inesc-id.pt">Information and Decision Support Systems Lab</a> of <a href="https://www.inesc-id.pt">INESC-ID</a>.</td>
