--- a/index.html
+++ b/index.html
@@ -698,6 +698,8 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Filipe Martins, <a href=""><i>Deep Learning Methods for Processing Digitized Herbarium Specimens</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>Sebastião Almeida, <a href=""><i>Estimating Emotional Valence and Arousal with Transformer-Based Language Models</i></a>, IST, 2021</li> <!-- ?? valores -->
 
+			<li>André Leite, <a href=""><i>Neural Models for Generating Clinically Accurate Chest X-Ray Reports</i></a>, IST, 2022 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
+			<li>Duarte Miranda, <a href=""><i>Neural Retrieval Models for the Portuguese Language</i></a>, IST, 2022 (<i>co-supervised with Dra. Mariana Almeeida</i>)</li> <!-- ?? valores -->				
 			</ul>
 		</td>
     </tr>
