--- a/index.html
+++ b/index.html
@@ -944,13 +944,15 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
+						<a href="">Herbert Pinto</a> |
 						<a href="https://vbn.aau.dk/en/persons/146477">Marina Georgati</a> |
 						<a href="https://www.hlt.inesc-id.pt/w/Eugénio_Ribeiro">Eugénio Alves Ribeiro</a> |
-						<a href="http://www.gsd.inesc-id.pt/~dcastro/">Daniel Castro</a> |
 						<a href="https://www.linkedin.com/in/fernandoblalves/">Fernando Alves</a> |
 						<a href="https://deepai.org/machine-learning/researcher/daniel-loureiro">Daniel Loureiro</a> |
 						<a href="https://scholar.google.com/citations?user=Vbw_-e8AAAAJ&hl=en">Gil Rocha</a> |
-						
+
+						<a href="https://www.linkedin.com/in/miguel-e-coimbra-65a20a57/">Miguel Coimbra</a> |
+						<a href="http://www.gsd.inesc-id.pt/~dcastro/">Daniel Castro</a> |						
 						<a href="http://josedevezas.com/">José Devezas</a> | 						
 						<a href="https://www.researchgate.net/profile/Sarah_Valentin4">Sarah Valentin</a> |	
 						<a href="http://www.contrib.andrew.cmu.edu/~baojiany/">Baojiang (Chris) Yang</a> | 
