--- a/index.html
+++ b/index.html
@@ -676,7 +676,9 @@ involved in several research projects related to geospatial aspects in informati
 			<!-- <li>Luís Antunes, <a href=""><i>Deep Learning Methods for Segmenting, Coloring, and Super-Resolving Historical Aerial Photos</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
 			<!-- <li>Gonçalo Simões, <a href=""><i>Deep Learning for Flood Extent Mapping</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores --> 
 			<!-- <li>Alexandre Machado, <a href=""><i>Process Mining From Natural Language Text</i></a>, IST, 2021 </li> --> <!-- ?? valores --> 
+			<!-- <li>Bruno Dias, <a href=""><i>Deep Learning for Semantic Segmentation of Remote Sensing Imagery</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
 			<li>Rita Conde, <a href=""><i>Predição de eventos em comércio online e sua interação com pesquisas</i></a>, IST, 2021 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- ?? valores -->
+			<li>Marcos Barata, <a href=""><i>Hybrid Approaches for Spatial Data Interpolation</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 				
 			<li>Diogo Viegas, <a href=""><i>Document Geocoding and Toponym Resolution with Neural Language Models</i></a>, IST, 2021 (<i>co-supervised with Prof. Maguelonne Teisseire</i>)</li> <!-- ?? valores -->
 			<li>João Barata, <a href=""><i>Deep Learning for Remote Sensing Image Captioning</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
@@ -684,14 +686,12 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Leonor Fernandes, <a href=""><i>Neural Methods for Biomedical Synonym Discovery and Concept Alignment</i></a>, IST, 2021 (<i>co-supervised with Dr. Daniel Faria</i>)</li> <!-- ?? valores -->
 			<li>João Pires da Silva, <a href=""><i>Deep Learning for Medical Visual Question Answering</i></a>, IST, 2021 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->
 			<li>Inês Filipe, <a href=""><i>Classification of Chest X-Ray Images with Deep Neural Networks for Detecting COVID-19</i></a>, IST, 2021 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
-			<li>Bruno Dias, <a href=""><i>Deep Learning for Semantic Segmentation of Remote Sensing Imagery</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->	
 			<li>Rodrigo Morais da Costa, <a href=""><i>Deep Learning Methods for Predicting Missing Data over Time Series of Remote Sensing Imagery</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>Tiago Mesquita, <a href=""><i>Neural Approaches for Question Retrieval and Generation from FAQ Databases</i></a>, IST, 2021 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- ?? valores -->
 			<li>André Godinho, <a href=""><i>Neural Approaches for Conversational Question Answering</i></a>, IST, 2021 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- ?? valores -->
 			<li>João Coelho, <a href=""><i>Spatio-Temporal Question Answering Leveraging Neural Language Models for Passage Retrieval</i></a>, IST, 2021 (<i>co-supervised with Prof. João Magalhães and Prof. Helena Sofia Pinto</i>)</li> <!-- ?? valores -->
 			<li>Filipe Amaral, <a href=""><i>Argumentation mining from textual documents combining deep learning and reasoning</i></a>, IST, 2021 (<i>co-supervised with Prof. Helena Sofia Pinto</i>)</li> <!-- ?? valores -->
 			<li>Francisco Matos, <a href=""><i>Delineating Boundaries for Vague Regions</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
-			<!-- <li>Marcos Barata, <a href=""><i>Hybrid Approaches for Spatial Data Interpolation</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
 				
 			<li>Artur Guimarães, <a href=""><i>Key-phrase Extraction Combining Graph-Based Methods and Neural Language Models</i></a>, IST, 2021 (<i>co-supervised with Prof. Mathieu Roche</i>)</li> <!-- ?? valores -->
 			<li>Nuno Infante, <a href=""><i>Clinical Text Summarization</i></a>, IST, 2021 (<i>co-supervised with Dr. Nuno Silva</i>)</li> <!-- ?? valores -->				
