--- a/index.html
+++ b/index.html
@@ -701,12 +701,12 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Sebastião Almeida, <a href=""><i>Estimating Emotional Valence and Arousal with Transformer-Based Language Models</i></a>, IST, 2021</li> <!-- ?? valores -->
 
 			<li>André Leite, <a href=""><i>Neural Models for Generating Clinically Accurate Chest X-Ray Reports</i></a>, IST, 2022 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
-			<li>Duarte Miranda, <a href=""><i>Neural Retrieval Models for the Portuguese Language</i></a>, IST, 2022 (<i>co-supervised with Dra. Mariana Almeeida</i>)</li> <!-- ?? valores -->				
+			<li>Duarte Miranda, <a href=""><i>Neural Retrieval Models for the Portuguese Language</i></a>, IST, 2022 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- ?? valores -->				
 			<li>Pedro Marques, <a href=""><i>Recommendation of heterogenous wellness products</i></a>, IST, 2022 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- ?? valores -->				
 			<li>Rafael Galhoz, <a href=""><i>Question Generation for the Portuguese Language</i></a>, IST, 2022 (<i>co-supervised with Prof. Pedro Santos</i>)</li> <!-- ?? valores -->				
 			<li>Ana Silva, <a href=""><i>ArgumentNext - Visualizing arguments in the real world</i></a>, IST, 2022 (<i>co-supervised with Prof. Daniel Gonçalves</i>)</li> <!-- ?? valores -->								
 			<li>Dora Lourenço, <a href=""><i>Explainable AI for Anti-Money Laundering</i></a>, IST, 2022 (<i>co-supervised with Dr. Pedro Saleiro</i>)</li> <!-- ?? valores -->
-			<li>Nichal Narotamo, <a href=""><i>Conversational Question Re-Writing</i></a>, IST, 2022 (<i>co-supervised with Dra. Mariana Almeeida</i>)</li> <!-- ?? valores -->
+			<li>Nichal Narotamo, <a href=""><i>Conversational Question Re-Writing</i></a>, IST, 2022 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- ?? valores -->
 			<li>Bruno Cardoso, <a href=""><i>Neural Retrieval Models for Matching Patients to Clinical Trials</i></a>, FCT/UNL, 2022 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->			
 			</ul>
 		</td>
