--- a/index.html
+++ b/index.html
@@ -347,6 +347,9 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<!-- <li>Rita Parada Ramos, and Bruno Martins, Remote Sensing Image Captioning with Continuous Output Neural Models Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2021 [<a href="">PDF</a>]</li> -->
+<!-- <li>João Coelho, João Magalhães, and Bruno Martins, Improving Neural Models for the Retrieval of Relevant Passages to Geographical Queries. Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2021 [<a href="">PDF</a>]</li> -->
+<li>Rita Parada Ramos, Patricia Pereira, Helena Moniz, João Paulo Carvalho, and Bruno Martins, Retrieval Augmentation for Deep Neural Networks. Proceedings of the INNS/IEEE International Joint Conference on Neural Networks, 2021 [<a href="">PDF</a>]</li>				
 <li>Luís Borges, Jamie Callan, and Bruno Martins, <i>Assessing the Benefits of Model Ensembles in Neural Re-Ranking for Passage Retrieval</i>, Proceedings of the European Conference on Information Retrieval, 2021 [<a href="">PDF</a>]</li>
 <li>Mário Cardoso, Jacinto Estima, and Bruno Martins, <i>Spatio-Temporal Forecasting With Gridded Remote Sensing Data Using Feed-Backward Decoding</i>, Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2020 [<a href="https://dl.acm.org/doi/abs/10.1145/3397536.3422247">PDF</a>]</li>
 <li>Paula Carvalho, Bruno Martins, Hugo Rosa, Silvio Amir, Jorge Baptista, and Mário J. Silva, <i>Situational Irony in Farcical News Headlines</i>, Proceedings of the International Conference on Computational Processing of Portuguese, 2020 [<a href="https://link.springer.com/chapter/10.1007/978-3-030-41505-1_7">PDF</a>]</li>
