--- a/index.html
+++ b/index.html
@@ -711,6 +711,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Dora Lourenço, <a href=""><i>Explainable AI for Anti-Money Laundering</i></a>, IST, 2022 (<i>co-supervised with Dr. Pedro Saleiro</i>)</li> <!-- ?? valores -->
 			<li>Nichal Narotamo, <a href=""><i>Conversational Question Re-Writing</i></a>, IST, 2022 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- ?? valores -->
 			<li>Bruno Cardoso, <a href=""><i>Neural Retrieval Models for Matching Patients to Clinical Trials</i></a>, FCT/UNL, 2022 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->			
+			<li>Sérgio Zaera Mata, <a href=""><i>Remote Sensing Image Captioning</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
