--- a/index.html
+++ b/index.html
@@ -322,7 +322,8 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>International Journal Papers</h3>
 
 			<ul>
-<!-- <li>Luís Borges, and Bruno Martins <i>Evaluating Neural Methods for Approximate String Matching and Duplicate Detection</i>, ACM Journal of Data and Information Quality, 2020 [<a href="">PDF</a>]</li> -->
+<li>Danielle Caled, Mário J. Silva, Bruno Martins, and Miguel Won, <i>Multi-Label Classification of Legislative Contents with Hierarchical Label Attention Networks</i>, International Journal on Digital Libraries, 2021 [<a href="">PDF</a>]</li>
+<!-- <li>Luís Borges, and Bruno Martins, <i>Evaluating Neural Methods for Approximate String Matching and Duplicate Detection</i>, ACM Journal of Data and Information Quality, 2020 [<a href="">PDF</a>]</li> -->
 <li>Diego Jiménez–Badillo, Patricia Murrieta–Flores, Bruno Martins, Ian Gregory, Mariana Favila-Vázquez, and Raquel Liceras-Garrido, <i>Developing Geographically Oriented NLP Approaches to Sixteenth–Century Historical Documents: Digging into Early Colonial Mexico</i>, Digital Humanities Quarterly, 2021 [<a href="http://digitalhumanities.org/dhq/vol/14/4/000490/000490.html">PDF</a>]</li>
 <li>Maria Dias, João Monteiro, Jacinto Estima, Joel Silva, and Bruno Martins, <i>Semantic Segmentation and Colorization of Grayscale Aerial Imagery with W-Net Models</i>, Expert Systems, 2020 [<a href="https://dx.doi.org/10.1111/exsy.12622">PDF</a>]</li>
 <li>Jorge Pereira, João Monteiro, Joel Silva, Jacinto Estima, and Bruno Martins, <i>Assessing Flood Severity from Crowdsourced Social Media Photos with Deep Neural Networks</i>, Multimedia Tools and Applications, vol. 79, 2020 [<a href="https://link.springer.com/article/10.1007/s11042-020-09196-8">PDF</a>]</li>
@@ -347,8 +348,8 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
-<!-- <li>Rita Parada Ramos, and Bruno Martins, Remote Sensing Image Captioning with Continuous Output Neural Models Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2021 [<a href="">PDF</a>]</li> -->
-<!-- <li>João Coelho, João Magalhães, and Bruno Martins, Improving Neural Models for the Retrieval of Relevant Passages to Geographical Queries. Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2021 [<a href="">PDF</a>]</li> -->
+<li>Rita Parada Ramos, and Bruno Martins, Remote Sensing Image Captioning with Continuous Output Neural Models Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2021 [<a href="">PDF</a>]</li>
+<li>João Coelho, João Magalhães, and Bruno Martins, Improving Neural Models for the Retrieval of Relevant Passages to Geographical Queries. Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2021 [<a href="">PDF</a>]</li>
 <li>Rita Parada Ramos, Patricia Pereira, Helena Moniz, João Paulo Carvalho, and Bruno Martins, Retrieval Augmentation for Deep Neural Networks. Proceedings of the INNS/IEEE International Joint Conference on Neural Networks, 2021 [<a href="">PDF</a>]</li>				
 <li>Luís Borges, Jamie Callan, and Bruno Martins, <i>Assessing the Benefits of Model Ensembles in Neural Re-Ranking for Passage Retrieval</i>, Proceedings of the European Conference on Information Retrieval, 2021 [<a href="">PDF</a>]</li>
 <li>Mário Cardoso, Jacinto Estima, and Bruno Martins, <i>Spatio-Temporal Forecasting With Gridded Remote Sensing Data Using Feed-Backward Decoding</i>, Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2020 [<a href="https://dl.acm.org/doi/abs/10.1145/3397536.3422247">PDF</a>]</li>
