--- a/index.html
+++ b/index.html
@@ -993,6 +993,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="DEI-LUISA-FRANCISCO-COUTO">Margarida Campos</a> |
 						<a href="DEI-ANDRÉ">João Moura</a> |
 						<a href="DEI-ARLINDO">Rafael Pedro</a> |
 						
