--- a/index.html
+++ b/index.html
@@ -769,6 +769,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://www.sigapp.org/sac/sac2022/">SAC'22</a> |
 						<a href="https://aaai.org/Conferences/AAAI-22/">AAAI'22</a> |
 						<a href="">PROPOR'22</a> |
 						<a href="http://www.conll.org/2021">CoNLL'21</a> |
