--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>International Journal Papers</h3>
 
 			<ul>
+<li>João Monteiro, Bruno Martins, Miguel Costa, and João M. Pires, <i>Geospatial Data Disaggregation Through Self-Trained Encoder-Decoder Convolutional Models</i>, ISPRS International Journal of Geo-Information, 2021 [<a href="">PDF</a>]</li>
 <li>Danielle Caled, Mário J. Silva, Bruno Martins, and Miguel Won, <i>Multi-Label Classification of Legislative Contents with Hierarchical Label Attention Networks</i>, International Journal on Digital Libraries, 2021 [<a href="">PDF</a>]</li>
 <!-- <li>Luís Borges, and Bruno Martins, <i>Evaluating Neural Methods for Approximate String Matching and Duplicate Detection</i>, ACM Journal of Data and Information Quality, 2020 [<a href="">PDF</a>]</li> -->
 <li>Diego Jiménez–Badillo, Patricia Murrieta–Flores, Bruno Martins, Ian Gregory, Mariana Favila-Vázquez, and Raquel Liceras-Garrido, <i>Developing Geographically Oriented NLP Approaches to Sixteenth–Century Historical Documents: Digging into Early Colonial Mexico</i>, Digital Humanities Quarterly, 2021 [<a href="http://digitalhumanities.org/dhq/vol/14/4/000490/000490.html">PDF</a>]</li>
