--- a/index.html
+++ b/index.html
@@ -571,6 +571,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>André Neves, <i>Deep Learning for Remote Sensing Applications</i>, FCT-UNL (<i>ongoing co-supervision with Prof. João Moura Pires and Prof. Carlos Damásio</i>)</li>			
 			<li>Gonçalo Raposo, <i>Conversational Search</i>, IST (<i>ongoing co-supervision with Prof. Luísa Coheur</i>)</li>
 			<li>Isabel Coutinho, <i>Clinical Text Mining</i>, IST (<i>ongoing co-supervision with João Paulo Leal</i>)</li>
+			<li>Martin Mirakyan, <i>Neural Architecture Search</i>, IST (<i>ongoing co-supervision with Paolo Romano</i>)</li>
 			</ul>
 			<h3>MSc Students</h3>
 			<ul>
@@ -729,7 +730,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
-						<!-- <a href="https://udi.ornl.gov/geoai2019">GeoAI'21</a> | -->
+						<a href="https://udi.ornl.gov/geoai2019">GeoAI'21</a> |
 						<a href="https://stko.geog.ucsb.edu/geokg-geoai2020/">GeoKG-GeoAI 2020</a> |
 						<a href="http://epia2021.inesc-id.pt">EPIA'21</a> |
 						<a href="http://eamt2020.inesc-id.pt">EAMT'20</a> |
@@ -770,9 +771,11 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://ecir2022.org">ECIR'22</a> |
 						<a href="http://www.sigapp.org/sac/sac2022/">SAC'22</a> |
 						<a href="https://aaai.org/Conferences/AAAI-22/">AAAI'22</a> |
-						<a href="">PROPOR'22</a> |
+						<a href="https://sites.universidadedefortaleza.com/propor2022/">PROPOR'22</a> |
+						<a href="http://simbig.org/SIMBig2021/">SIMBig'21</a> |
 						<a href="http://www.conll.org/2021">CoNLL'21</a> |
 						<a href="http://sigspatial2021.sigspatial.org">SIGSPATIAL'21</a> |
 						<a href="http://www.kdd.org/kdd2021/">KDD'21</a> |
