--- a/index.html
+++ b/index.html
@@ -776,6 +776,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://aaai.org/Conferences/AAAI-22/">AAAI'22</a> |
 						<a href="https://sites.universidadedefortaleza.com/propor2022/">PROPOR'22</a> |
 						<a href="http://simbig.org/SIMBig2021/">SIMBig'21</a> |
+						<a href="https://ludovicmoncla.github.io/sigspatial-geohumanities-2021/">SIGSPATIAL GeoHumanities'21</a> |
 						<a href="http://www.conll.org/2021">CoNLL'21</a> |
 						<a href="http://sigspatial2021.sigspatial.org">SIGSPATIAL'21</a> |
 						<a href="http://www.kdd.org/kdd2021/">KDD'21</a> |
