--- a/index.html
+++ b/index.html
@@ -716,6 +716,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Nichal Narotamo, <a href=""><i>Conversational Question Re-Writing</i></a>, IST, 2022 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- ?? valores -->
 			<li>Bruno Cardoso, <a href=""><i>Neural Retrieval Models for Matching Patients to Clinical Trials</i></a>, FCT/UNL, 2022 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->			
 			<li>Sérgio Zaera Mata, <a href=""><i>Remote Sensing Image Captioning</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
+			<li>Catarina Gatinho, <a href=""><i>Geospatial Language Understanding</i></a>, IST, 2022</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
