--- a/index.html
+++ b/index.html
@@ -680,15 +680,15 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Miguel Froes, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/846778572212844"><i>Fenotipagem na Multimorbilidade</i></a>, IST, 2020 (<i>co-supervised with Prof. Mário Silva and Dr. Bernardo Neves</i>)</li> <!-- 18 valores -->
 			<li>Luís Pereira, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/1128253548922233"><i>Attention Augmented Convolutional Neural Networks for the Classification of Medical Images</i></a>, IST, 2020</li> <!-- 16 valores -->
 			<li>Olavo Bacelar, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mma/dissertacao/1409728525633135"><i>Deep Energy Networks for Data Completion</i></a>, IST, 2021 (<i>co-supervised with Prof. Conceição Amado and Prof. André Martins</i>)</li> <!-- 18 valores -->				
-			
-			<li>Rita Conde, <a href=""><i>Predição de eventos em comércio online e sua interação com pesquisas</i></a>, IST, 2021 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- 16 valores -->
-			<li>André Godinho, <a href=""><i>Neural Approaches for Conversational Question Answering</i></a>, IST, 2021 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- 19 valores -->
 
 			<!-- <li>Luís Antunes, <a href=""><i>Deep Learning Methods for Segmenting, Coloring, and Super-Resolving Historical Aerial Photos</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
 			<!-- <li>Gonçalo Simões, <a href=""><i>Deep Learning for Flood Extent Mapping</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores --> 
 			<!-- <li>Alexandre Machado, <a href=""><i>Process Mining From Natural Language Text</i></a>, IST, 2021 </li> --> <!-- ?? valores --> 
 			<!-- <li>Bruno Dias, <a href=""><i>Deep Learning for Semantic Segmentation of Remote Sensing Imagery</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
 			<!-- <li>Rodrigo Morais da Costa, <a href=""><i>Deep Learning Methods for Predicting Missing Data over Time Series of Remote Sensing Imagery</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
+
+			<li>Rita Conde, <a href=""><i>Predição de eventos em comércio online e sua interação com pesquisas</i></a>, IST, 2021 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- 16 valores -->
+			<li>André Godinho, <a href=""><i>Neural Approaches for Conversational Question Answering</i></a>, IST, 2021 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- 19 valores -->
 			
 			<li>Marcos Barata, <a href=""><i>Hybrid Approaches for Spatial Data Interpolation</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>Diogo Viegas, <a href=""><i>Document Geocoding and Toponym Resolution with Neural Language Models</i></a>, IST, 2021 (<i>co-supervised with Prof. Maguelonne Teisseire</i>)</li> <!-- ?? valores -->
@@ -716,8 +716,8 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Nichal Narotamo, <a href=""><i>Conversational Question Re-Writing</i></a>, IST, 2022 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- ?? valores -->
 			<li>Bruno Cardoso, <a href=""><i>Neural Retrieval Models for Matching Patients to Clinical Trials</i></a>, FCT/UNL, 2022 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->			
 			<li>Sérgio Zaera Mata, <a href=""><i>Remote Sensing Image Captioning</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
-			<li>José Malaquias, <a href=""><i>Geospatial Language Understanding</i></a>, IST, 2022</li> <!-- ?? valores -->
-			<li>Sérgio Zaera Mata, <a href=""><i>Natural Language Processing Leveraging Entity-Aware Representations</i></a>, IST, 2022 (<i>co-supervised with Dr. Pedro Mota</i>)</li> <!-- ?? valores -->
+			<li>Catarina Gatinho, <a href=""><i>Geospatial Language Understanding</i></a>, IST, 2022</li> <!-- ?? valores -->
+			<li>José Malaquias, <a href=""><i>Natural Language Processing Leveraging Entity-Aware Representations</i></a>, IST, 2022 (<i>co-supervised with Dr. Pedro Mota</i>)</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
