--- a/index.html
+++ b/index.html
@@ -774,6 +774,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://text2story22.inesctec.pt">Text2Story'22</a> |
 						<a href="https://ecir2022.org">ECIR'22</a> |
 						<a href="http://www.sigapp.org/sac/sac2022/">SAC'22</a> |
 						<a href="https://aaai.org/Conferences/AAAI-22/">AAAI'22</a> |
