--- a/index.html
+++ b/index.html
@@ -762,11 +762,10 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://www.mdpi.com/journal/ijgi/special_issues/geo_ai">ISPRS IJGI - Special Issue on Geospatial Artificial Intelligence</a> |
 						<a href="https://www.mdpi.com/journal/ijgi/special_issues/Geoinformation_Extraction_Retrieval">ISPRS IJGI - Special Issue on Geographic Information Extraction and Retrieval</a> |
 						<a href="http://theholmoak.com/journal/vgi">Volunteered Geographic Information - Thematic Issue</a> |
-						<a href="">GeoJournal - Special Issue on Spatial Humanities</a> |
+						<!-- <a href="">GeoJournal - Special Issue on Spatial Humanities</a> | -->
 						<a href="http://explore.tandfonline.com/pages/cfp/tgis-spatial-computing-3q2017?utm_source=CPB&utm_medium=cms&utm_campaign=JMG01510">International Journal of Geographical Information Science - Special Issue on Spatial Computing for the Digital Humanities</a> |
 						<a href="http://www.springer.com/cda/content/document/cda_downloaddocument/SI_Environmental+and+Geospatial+Data+Analytics.pdf?SGWID=0-0-45-1578169-p177383280">International Journal of Data Science and Analytics - Special Issue on Environmental and Geospatial Data Analytics</a> |
 						<a href="http://linguamatica.com/index.php/linguamatica/about/editorialTeam">Linguamática</a> |
-						<a href="http://www.mdpi.com/journal/information/editors/">Information</a>
 					</li></ul>
 					</td>
 				</tr>
