--- a/index.html
+++ b/index.html
@@ -1002,9 +1002,12 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="DEI-PEDRO-SANTOS">Maria Duarte</a> |
+						<a href="ISCTE-LUISA-JOAOPAULO">Tiago Almeida</a> |
+						<a href="DEI-LUISA-JOAOPAULO">Diogo Pinheiro</a> |
+						<a href="DEI-ARLINDO">Rafael Pedro</a> |
 						<a href="DEI-LUISA-FRANCISCO-COUTO">Margarida Campos</a> |
 						<a href="DEI-ANDRÉ">João Moura</a> |
-						<a href="DEI-ARLINDO">Rafael Pedro</a> |
 						
 						<a href="DEI-DAVID">Duarte Teles</a> |
 						<a href="DEI-DAVID">Daniel Oliveira</a> |
