--- a/index.html
+++ b/index.html
@@ -717,7 +717,9 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Bruno Cardoso, <a href=""><i>Neural Retrieval Models for Matching Patients to Clinical Trials</i></a>, FCT/UNL, 2022 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->			
 			<li>Sérgio Zaera Mata, <a href=""><i>Remote Sensing Image Captioning</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>Catarina Gatinho, <a href=""><i>Geospatial Language Understanding</i></a>, IST, 2022</li> <!-- ?? valores -->
-			<li>José Malaquias, <a href=""><i>Natural Language Processing Leveraging Entity-Aware Representations</i></a>, IST, 2022 (<i>co-supervised with Dr. Pedro Mota</i>)</li> <!-- ?? valores -->
+			<li>José Malaquias, <a href=""><i>Natural Language Processing Leveraging Entity-Aware Representations</i></a>, IST, 2022 (<i>co-supervised with Dr. Pedro Mota</i>)</li> <!-- ?? valores -->			
+			<li>Diogo Moura, <a href=""><i>Neural Models Models Relating Natural Language and Images</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
+			<li>José Castro, <a href=""><i>Neural Retrieval Models for Matching Patients to Clinical Trials</i></a>, IST, 2022 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->	
 			</ul>
 		</td>
     </tr>
@@ -1002,10 +1004,15 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+
+						<a href="DEI-VEIGAO">Bruno Morais</a> |
+						<a href="DEI-VINGA">André Pereira</a> |
+						<a href="DEEC-JOAONUNO">Mihir Odhavji</a> |
 						<a href="DEI-PEDRO-SANTOS">Maria Duarte</a> |
 						<a href="ISCTE-LUISA-JOAOPAULO">Tiago Almeida</a> |
 						<a href="DEI-LUISA-JOAOPAULO">Diogo Pinheiro</a> |
 						<a href="DEI-ARLINDO">Rafael Pedro</a> |
+
 						<a href="DEI-LUISA-FRANCISCO-COUTO">Margarida Campos</a> |
 						<a href="DEI-ANDRÉ">João Moura</a> |
 						
