--- a/index.html
+++ b/index.html
@@ -918,6 +918,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
+						<a href="https://dl.acm.org/journal/tomm">Transactions on Multimedia Computing Communications and Applications</a> |						
 						<a href="https://www.sciencedirect.com/journal/artificial-intelligence-in-medicine">Artificial Intelligence in Medicine</a> |
 						<a href="https://www.sciencedirect.com/journal/informatics-in-medicine-unlocked">Informatics in Medicine Unlocked</a> |						
 						<a href="https://ieeeaccess.ieee.org">IEEE Access</a> |
