--- a/index.html
+++ b/index.html
@@ -322,9 +322,10 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>International Journal Papers</h3>
 
 			<ul>
+<!-- <li>Ana Cardodo, Bruno Martins, and Jacinto Estima, <i>A novel deep learning approach using contextual embeddings for toponym resolution</i>, ISPRS International Journal of Geo-Information, 2021 [<a href="">PDF</a>]</li> -->				
 <li>Jacques Fize, Ludovic Moncla, and Bruno Martins, <i>Deep Learning for Toponym Resolution: Geocoding Based on Pairs of Toponyms</i>, ISPRS International Journal of Geo-Information, 2021 [<a href="https://www.mdpi.com/2220-9964/10/12/818">PDF</a>]</li>
 <li>João Monteiro, Bruno Martins, Miguel Costa, and João M. Pires, <i>Geospatial Data Disaggregation Through Self-Trained Encoder-Decoder Convolutional Models</i>, ISPRS International Journal of Geo-Information, 2021 [<a href="https://www.mdpi.com/2220-9964/10/9/619">PDF</a>]</li>
-<li>Danielle Caled, Mário J. Silva, Bruno Martins, and Miguel Won, <i>Multi-Label Classification of Legislative Contents with Hierarchical Label Attention Networks</i>, International Journal on Digital Libraries, 2021 [<a href="">PDF</a>]</li>
+<li>Danielle Caled, Mário J. Silva, Bruno Martins, and Miguel Won, <i>Multi-Label Classification of Legislative Contents with Hierarchical Label Attention Networks</i>, International Journal on Digital Libraries, 2021 [<a href="https://link.springer.com/article/10.1007/s00799-021-00307-w">PDF</a>]</li>
 <!-- <li>Luís Borges, and Bruno Martins, <i>Evaluating Neural Methods for Approximate String Matching and Duplicate Detection</i>, ACM Journal of Data and Information Quality, 2020 [<a href="">PDF</a>]</li> -->
 <li>Diego Jiménez–Badillo, Patricia Murrieta–Flores, Bruno Martins, Ian Gregory, Mariana Favila-Vázquez, and Raquel Liceras-Garrido, <i>Developing Geographically Oriented NLP Approaches to Sixteenth–Century Historical Documents: Digging into Early Colonial Mexico</i>, Digital Humanities Quarterly, 2021 [<a href="http://digitalhumanities.org/dhq/vol/14/4/000490/000490.html">PDF</a>]</li>
 <li>Maria Dias, João Monteiro, Jacinto Estima, Joel Silva, and Bruno Martins, <i>Semantic Segmentation and Colorization of Grayscale Aerial Imagery with W-Net Models</i>, Expert Systems, 2020 [<a href="https://dx.doi.org/10.1111/exsy.12622">PDF</a>]</li>
