--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>International Journal Papers</h3>
 
 			<ul>
-<!-- <li>Ana Cardodo, Bruno Martins, and Jacinto Estima, <i>A novel deep learning approach using contextual embeddings for toponym resolution</i>, ISPRS International Journal of Geo-Information, 2021 [<a href="">PDF</a>]</li> -->				
+<li>Ana Cardodo, Bruno Martins, and Jacinto Estima, <i>A novel deep learning approach using contextual embeddings for toponym resolution</i>, ISPRS International Journal of Geo-Information, 2021 [<a href="">PDF</a>]</li>
 <li>Jacques Fize, Ludovic Moncla, and Bruno Martins, <i>Deep Learning for Toponym Resolution: Geocoding Based on Pairs of Toponyms</i>, ISPRS International Journal of Geo-Information, 2021 [<a href="https://www.mdpi.com/2220-9964/10/12/818">PDF</a>]</li>
 <li>João Monteiro, Bruno Martins, Miguel Costa, and João M. Pires, <i>Geospatial Data Disaggregation Through Self-Trained Encoder-Decoder Convolutional Models</i>, ISPRS International Journal of Geo-Information, 2021 [<a href="https://www.mdpi.com/2220-9964/10/9/619">PDF</a>]</li>
 <li>Danielle Caled, Mário J. Silva, Bruno Martins, and Miguel Won, <i>Multi-Label Classification of Legislative Contents with Hierarchical Label Attention Networks</i>, International Journal on Digital Libraries, 2021 [<a href="https://link.springer.com/article/10.1007/s00799-021-00307-w">PDF</a>]</li>
@@ -721,7 +721,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Catarina Gatinho, <a href=""><i>Geospatial Language Understanding</i></a>, IST, 2022</li> <!-- ?? valores -->
 			<li>José Malaquias, <a href=""><i>Natural Language Processing Leveraging Entity-Aware Representations</i></a>, IST, 2022 (<i>co-supervised with Dr. Pedro Mota</i>)</li> <!-- ?? valores -->			
 			<li>Diogo Moura, <a href=""><i>Neural Models Models Relating Natural Language and Images</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
-			<li>José Castro, <a href=""><i>Neural Retrieval Models for Matching Patients to Clinical Trials</i></a>, IST, 2022 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->	
+			<!-- <li>José Castro, <a href=""><i>Neural Retrieval Models for Matching Patients to Clinical Trials</i></a>, IST, 2022 (<i>co-supervised with Prof. João Magalhães</i>)</li> --> <!-- ?? valores -->	
 			</ul>
 		</td>
     </tr>
