--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
-
+						<a href="NOVA">Rafaela Cruz</a> |
+						
 						<a href="DEI-VEIGAO">Bruno Morais</a> |
 						<a href="DEI-VINGA">André Pereira</a> |
 						<a href="DEEC-JOAONUNO">Mihir Odhavji</a> |
