--- a/index.html
+++ b/index.html
@@ -784,6 +784,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://tpdl2022.dei.unipd.it">TPDL'22</a> |
 						<a href="https://ds2022.sciencesconf.org/">DS'22</a> |						
 						<a href="https://sites.google.com/view/socialnlp2022/">SocialNLP'22</a> |						
 						<a href="https://dhere.de/locweb/locweb2022/">LocWeb'22</a> |						
