--- a/index.html
+++ b/index.html
@@ -1027,6 +1027,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="DEI-VINGA">Michael Madeira</a> |
+						
 						<a href="NOVA">Rafaela Cruz</a> |
 						
 						<a href="DEI-VEIGAO">Bruno Morais</a> |
