--- a/index.html
+++ b/index.html
@@ -790,6 +790,9 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://conll.org">CoNLL'22</a> |
+						<a href="https://2022.emnlp.org">EMNLP'22</a> |
+						<a href="https://aaclweb.org">AACL-IJCNLP'22</a> |
 						<a href="https://agile-online.org/conference-2022">AGILE'22</a> |
 						<a href="http://tpdl2022.dei.unipd.it">TPDL'22</a> |
 						<a href="https://ds2022.sciencesconf.org/">DS'22</a> |						
